Прячет модальные окна
По заданию написано, что сейчас их не нужно стилизовать и можно убрать.

--- a/css/style.css
+++ b/css/style.css
@@ -37,3 +37,7 @@
        url("../fonts/gilroyextrabold.woff") format("woff"),
        url("../fonts/gilroyextrabold.woff2") format("woff2");
 }
+
+.modal {
+  display: none;
+}
