--- a/css/style.css
+++ b/css/style.css
@@ -38,6 +38,24 @@
        url("../fonts/gilroyextrabold.woff2") format("woff2");
 }
 
+body {
+  margin: 0;
+  padding: 0;
+
+  font-family: "Open Sans", Arial, sans-serif;
+  font-size: 15px;
+  line-height: 30px;
+  letter-spacing: 0.15px;
+  font-weight: 300;
+  color: #464646;
+
+  background-color: #ffffff;
+}
+
+a {
+  text-decoration: none;
+}
+
 .modal {
   display: none;
 }
