--- a/css/style.css
+++ b/css/style.css
@@ -38,24 +38,6 @@
        url("../fonts/gilroyextrabold.woff2") format("woff2");
 }
 
-
-/* body > * {
-  background-color: rgba(255, 0, 0, 0.4);
-}
-
-body > * > * {
-  background-color: rgba(0, 255, 0, 0.4);
-}
-
-body > * > * > * {
-  background-color: rgba(0, 0, 255, 0.4);
-}
-
-body > * > * > * > * {
-  background-color: rgba(0, 255, 255, 0.4);
-} */
-
-
 /* Вспомогательные классы для сетки */
 
 .layout-positioner {
@@ -377,11 +359,10 @@ a {
 
 .layout-footer-columns {
   display: flex;
-  /* justify-content: space-between; */
 }
 
 .layout-footer-left-column {
-  /* width: 325px; */
+  width: 325px;
 }
 
 .site-footer-logo:hover,
@@ -396,6 +377,12 @@ a {
 .address,
 .phone-number {
   letter-spacing: normal;
+}
+
+.layout-footer-middle-column {
+  width: 440px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .site-footer-site-navigation a{
@@ -429,7 +416,7 @@ a {
 }
 
 .layout-footer-right-column {
-  /* width: 325px; */
+  width: 325px;
 }
 
 .site-footer-site-menu a {
