--- a/css/style.css
+++ b/css/style.css
@@ -41,9 +41,9 @@
 /* Вспомогательные классы для сетки */
 
 .layout-positioner {
-  width: 1180px;
+  width: 1160px;
   margin: 0 auto;
-  padding: 10px;
+  padding: 0 20px;
 }
 
 /* Преобладающие текстовые стили страницы */
@@ -97,16 +97,19 @@ a {
 /* Стили для шапки сайта */
 
 .site-header {
-  position: relative;
+  margin-top: 40px;
   margin-bottom: 40px;
 
-  margin-top: 40px;
+  color: #000000;
+}
+
+.layout-header {
+  position: relative;
+
   padding-top: 50px;
   padding-right: 60px;
   padding-bottom: 165px;
   padding-left: 60px;
-
-  color: #000000;
 
   background-color: rgba(240, 197, 46, 0.5);
 }
